# Armorplate

./: .gitignore  CMakeLists.txt  args_config.yaml  camera_config.yaml
include/: armor_corner_refiner.hpp  sliding_window_ba.hpp
include/tools/: logger.hpp  math_utils.hpp
include/yolo/: yolo_armor.hpp  yolo_detector.hpp
src/: armor_corner_refiner.cpp  main.cpp  sliding_window_ba.cpp
src/tools/: logger.cpp  math_utils.cpp
src/yolo/: yolo_armor.cpp  yolo_detector.cpp
